FrontEnd <> implemented CourseEdit functionality on frontend

--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -60,7 +60,7 @@
 .bg-green {
   background-color: #639b6d;
 }
-.bg-dark-red {
+.bg-red-dark {
   background-color: #a95151;
 }
 .bg-mustard {
@@ -103,7 +103,7 @@
 .color-green {
   color: #639b6d;
 }
-.color-dark-red {
+.color-red-dark {
   color: #a95151;
 }
 .color-mustard {
